# ChangeLog for app-arch/libarchive
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/libarchive/ChangeLog,v 1.9 2007/12/04 16:24:53 drac Exp $

*libarchive-2.4.4 (04 Dec 2007)

  04 Dec 2007; Samuli Suominen <drac@gentoo.org> +libarchive-2.4.4.ebuild:
  Version bump, thanks to Tim Kientzle <kientzle at freebsd.org> for applying
  our patch fixing automagic acl and xattr. This version also fixes most of
  the test suite.

*libarchive-2.4.2 (03 Dec 2007)

  03 Dec 2007; Samuli Suominen <drac@gentoo.org> +libarchive-2.4.2.ebuild:
  Version bump.

*libarchive-2.4.0-r1 (06 Nov 2007)

  06 Nov 2007; Diego Pettenò <flameeyes@gentoo.org>
  -libarchive-2.3.5.ebuild, -libarchive-2.4.0.ebuild,
  +libarchive-2.4.0-r1.ebuild:
  Fix linking of shared libarchive, thanks to Jan Psota for reporting.

*libarchive-2.4.0 (04 Nov 2007)

  04 Nov 2007; Diego Pettenò <flameeyes@gentoo.org>
  -libarchive-2.2.5.ebuild, -libarchive-2.3.3.ebuild,
  -libarchive-2.3.4.ebuild, +libarchive-2.4.0.ebuild:
  Version bump, and cleanup of old ebuilds.

*libarchive-2.3.5 (29 Oct 2007)

  29 Oct 2007; Roy Marples <uberlord@gentoo.org> +libarchive-2.3.5.ebuild:
  Bump and enable bsdcpio.

*libarchive-2.3.4 (10 Oct 2007)

  10 Oct 2007; Roy Marples <uberlord@gentoo.org> +libarchive-2.3.4.ebuild:
  Bump

*libarchive-2.3.3 (04 Oct 2007)

  04 Oct 2007; <drizzt@gentoo.org> +libarchive-2.3.3.ebuild:
  Version bump

*libarchive-2.2.5 (14 Jul 2007)

  14 Jul 2007; Diego Pettenò <flameeyes@gentoo.org>
  +libarchive-2.2.5.ebuild:
  Version bump.

  13 Jul 2007; Diego Pettenò <flameeyes@gentoo.org>
  +files/libarchive-2.1.5-acl.patch, +files/libarchive-2.1.9-static.patch,
  +metadata.xml, +libarchive-2.2.4.ebuild:
  Add libarchive.

*libarchive-2.2.4 (13 Jul 2007)

  13 Jul 2007; Diego Pettenò <flameeyes@gentoo.org>
  +files/libarchive-2.1.5-acl.patch, +files/libarchive-2.1.9-static.patch,
  +metadata.xml, +libarchive-2.2.4.ebuild: