@@ -8,8 +8,7 @@ RMD160 e69e1b894c9ce6d1a4098731d10ebedcd2a812c8 files/libarchive-2.1.9-static.pa
 SHA256 6ab2eee004a6ec228acea4ceda9515c84edd9ca1187b8a918bef541d3dd9492d files/libarchive-2.1.9-static.patch 1323
 DIST libarchive-2.2.4.tar.gz 636879 RMD160 2aa2e4124c1081acfdc666335b659457dccb4fd6 SHA1 171c25a40f6cc3eee3be3343f2b9436b22368f18 SHA256 186d3aa24817f64b12cb0ff4c8b4a76df33921446b912ca015a05b66f8755df0
 DIST libarchive-2.4.0.tar.gz 791312 RMD160 fac39fc336dd6701c3c871c6634e2876239ef58c SHA1 b1d845e1c9e1631ba4b220627604832a14d84679 SHA256 edde790bdcae164a2f4abda5e3b34b6ad6c15c45b1d30d561bbb67bef4cd9724
-DIST libarchive-2.4.2.tar.gz 793477 RMD160 2bb633ba47398f27d7ae400fb79e6248698b58c7 SHA1 dc6c72860944a82564c65fcd307902ed395aa1ca SHA256 5aa9a30ab07b626454e9dcb469c7785dd999f3f88de71441cad10d71b5b1d350
-DIST libarchive-2.4.4.tar.gz 803198 RMD160 bd6b65a81d42bd33c2db7cd2a1fa35ee81c9e025 SHA1 8a5ba56c93945f119f3631507be8fc2abca7f8b4 SHA256 33ca395a0e9838219ee956a322b3b82ca4e1fec71bddcd8f47e50621089f8fdb
+DIST libarchive-2.4.5.tar.gz 803319 RMD160 ae0eedc64ea7c68be8874564e8966c304c5e27fb SHA1 f5d26c3f8460cc07d15ffb0b165f084bcb1a0963 SHA256 8e156e08b35c6fd422457566e697347ec19914b007352b2c686e9f860ceddcc5
 EBUILD libarchive-2.2.4.ebuild 1879 RMD160 58516de1505d655691f203043f08d39be2bac1f9 SHA1 d5fa91126fdfef5e7a2bf7e9942f3dac69c680a9 SHA256 29a4441e8e6be06f56bfcefdaf712c882d4497ecd69a291426d3ceff029b4e6e
 MD5 3f7521926bfb5cdc879f1d230768a03e libarchive-2.2.4.ebuild 1879
 RMD160 58516de1505d655691f203043f08d39be2bac1f9 libarchive-2.2.4.ebuild 1879
@@ -18,18 +17,14 @@ EBUILD libarchive-2.4.0-r1.ebuild 1911 RMD160 cdea89930dd1f8e2eb44ab0fb5559951c3
 MD5 ab89efc6163f961285888e1353d05c9b libarchive-2.4.0-r1.ebuild 1911
 RMD160 cdea89930dd1f8e2eb44ab0fb5559951c3f5a8b0 libarchive-2.4.0-r1.ebuild 1911
 SHA256 de2277eeb786241a54849e06f1c4ea24e0b1cadaa1ff4c740c39aef462693099 libarchive-2.4.0-r1.ebuild 1911
-EBUILD libarchive-2.4.2.ebuild 1702 RMD160 8944ad47215d4514a60a59cbfd6f6f0f9b323fcd SHA1 e4a4faa73a558f393ae5dc5bb3067c3236f642d1 SHA256 0ac5f0c32626893a573471a96cee7eea5f930955ab3bbe9a5cd035efbe52075d
-MD5 1955294bcdeb73cd1745728c8c1ec65b libarchive-2.4.2.ebuild 1702
-RMD160 8944ad47215d4514a60a59cbfd6f6f0f9b323fcd libarchive-2.4.2.ebuild 1702
-SHA256 0ac5f0c32626893a573471a96cee7eea5f930955ab3bbe9a5cd035efbe52075d libarchive-2.4.2.ebuild 1702
-EBUILD libarchive-2.4.4.ebuild 1644 RMD160 aaf21d133beda83d9a077ba36265056f2e50f2cd SHA1 69af9e8914637381fef3232a3b55d3bf485043f3 SHA256 b0e21843ac1a7bd5a2eaa1515c857a1993f058bdf809058b80087a5d2786e13e
-MD5 d14b6c9428a46c37d01f91bd01326f61 libarchive-2.4.4.ebuild 1644
-RMD160 aaf21d133beda83d9a077ba36265056f2e50f2cd libarchive-2.4.4.ebuild 1644
-SHA256 b0e21843ac1a7bd5a2eaa1515c857a1993f058bdf809058b80087a5d2786e13e libarchive-2.4.4.ebuild 1644
-MISC ChangeLog 14338 RMD160 4b6ff11b81e970fa31da8d492ac7fd600ce711d2 SHA1 886c7c987d18f32d59de47dd8a8acb1f5945a077 SHA256 c8a302528473e0a9416de809e616259552b062545de0bb57a0540819fcd2747c
-MD5 abf2687ea97665f0609cb3fead90ddeb ChangeLog 14338
-RMD160 4b6ff11b81e970fa31da8d492ac7fd600ce711d2 ChangeLog 14338
-SHA256 c8a302528473e0a9416de809e616259552b062545de0bb57a0540819fcd2747c ChangeLog 14338
+EBUILD libarchive-2.4.5.ebuild 1644 RMD160 32bef66ec8a83fd962974cee0494df70086bfec0 SHA1 c32a8d2a597898361d0a493676930e4e0a476294 SHA256 7b67d633d9ed4f3c9f6a3447307d27de59413d178ea1ca897a35254c74bcda3a
+MD5 e3cd24f6667b5af462f356e74788f389 libarchive-2.4.5.ebuild 1644
+RMD160 32bef66ec8a83fd962974cee0494df70086bfec0 libarchive-2.4.5.ebuild 1644
+SHA256 7b67d633d9ed4f3c9f6a3447307d27de59413d178ea1ca897a35254c74bcda3a libarchive-2.4.5.ebuild 1644
+MISC ChangeLog 14486 RMD160 ba30d902e5fe4afe831686c7bec1907d94a7840e SHA1 4661886bca6222e1402f8e4663d106c262b52110 SHA256 d4c0cf30bb2a932ed0a081ac4602ac2b528f15a4fd53d295843406083ba68269
+MD5 7975b393612a24f37429b5490b1f4267 ChangeLog 14486
+RMD160 ba30d902e5fe4afe831686c7bec1907d94a7840e ChangeLog 14486
+SHA256 d4c0cf30bb2a932ed0a081ac4602ac2b528f15a4fd53d295843406083ba68269 ChangeLog 14486
 MISC metadata.xml 337 RMD160 31dad5aaff39f6017382ea7c4f77ac229793c487 SHA1 c32d51164489ed68a27016c26aafae04b70ee447 SHA256 c82266892e94c9792cadf25c0ba9c4cf42d5279903e791b80e8f735ec91d923b
 MD5 abbe0170afef9b0f317830b41e537afa metadata.xml 337
 RMD160 31dad5aaff39f6017382ea7c4f77ac229793c487 metadata.xml 337
@@ -40,9 +35,6 @@ SHA256 2ecca5a95f31cc517355482604cdb19437b11d7ec5ff2884dc8707c780791eeb files/di
 MD5 25255d2ff2328999a08912800c47f659 files/digest-libarchive-2.4.0-r1 250
 RMD160 14204d58c53b78ee9b302366203b2ef4053291f8 files/digest-libarchive-2.4.0-r1 250
 SHA256 b81e1b3b3fc6748d2192e9aacfaeb264439a07feaa81ce8c59a502bb3c7fe457 files/digest-libarchive-2.4.0-r1 250
-MD5 326439c9931b724925c769a1c41b99f5 files/digest-libarchive-2.4.2 250
-RMD160 b9f2b723d1d4343fcce947d62bf260eb5a549bd3 files/digest-libarchive-2.4.2 250
-SHA256 27eb322c7b2dcc6633a233b841547f645e17640ce08a579f88a6c23156002f9c files/digest-libarchive-2.4.2 250
-MD5 344f9d8814dfb5fe95cf5e9afefea43e files/digest-libarchive-2.4.4 250
-RMD160 77701bf55a6123423ab7066b97accb943402535b files/digest-libarchive-2.4.4 250
-SHA256 f425c61d5f9ac98630bb1e1c7fda5d5545fe4eaa8f5af5873e0b3a3ba277e365 files/digest-libarchive-2.4.4 250
+MD5 63ee2dcb1141d4d4dd1bc6edcd828088 files/digest-libarchive-2.4.5 250
+RMD160 bee1a58fe68f6f9b18421d4e6acb5b4738c5d030 files/digest-libarchive-2.4.5 250
+SHA256 40f239780296afa92204d79634c80b6e2bd28c8c7f5a8483dfd36c476305dfbd files/digest-libarchive-2.4.5 250
