@@ -1,3 +1,0 @@
-MD5 32e44a8140d067aa64894b27f29b045d libarchive-2.4.2.tar.gz 793477
-RMD160 2bb633ba47398f27d7ae400fb79e6248698b58c7 libarchive-2.4.2.tar.gz 793477
-SHA256 5aa9a30ab07b626454e9dcb469c7785dd999f3f88de71441cad10d71b5b1d350 libarchive-2.4.2.tar.gz 793477
