@@ -1,3 +1,0 @@
-MD5 ef8a63e989a450b0f630284c5a02c8e5 libarchive-2.4.4.tar.gz 803198
-RMD160 bd6b65a81d42bd33c2db7cd2a1fa35ee81c9e025 libarchive-2.4.4.tar.gz 803198
-SHA256 33ca395a0e9838219ee956a322b3b82ca4e1fec71bddcd8f47e50621089f8fdb libarchive-2.4.4.tar.gz 803198
