@@ -1,0 +1,3 @@
+MD5 f128c247bac1271e09258ce4e7223ad4 libarchive-2.4.5.tar.gz 803319
+RMD160 ae0eedc64ea7c68be8874564e8966c304c5e27fb libarchive-2.4.5.tar.gz 803319
+SHA256 8e156e08b35c6fd422457566e697347ec19914b007352b2c686e9f860ceddcc5 libarchive-2.4.5.tar.gz 803319
