@@ -1,6 +1,11 @@
 # ChangeLog for app-arch/libarchive
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/libarchive/ChangeLog,v 1.9 2007/12/04 16:24:53 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/libarchive/ChangeLog,v 1.10 2007/12/05 14:51:29 drac Exp $
+
+*libarchive-2.4.5 (05 Dec 2007)
+
+  05 Dec 2007; Samuli Suominen <drac@gentoo.org> +libarchive-2.4.5.ebuild:
+  Version bump, test suite works now.
 
 *libarchive-2.4.4 (04 Dec 2007)
 
